--- a/requirements.txt
+++ b/requirements.txt
@@ -143,7 +143,7 @@ python-socketio==5.5.2
 pytz==2021.3
 PyYAML==6.0.1
 qrcode==7.3.1
-rapidfuzz==3.0.0
+rapidfuzz==*
 rdflib==6.0.2
 redis==4.3.4
 requests==2.26.0
