--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,6 @@ certifi==2021.10.8
 cffi==1.16.0
 charset-normalizer==2.0.12
 ci-info==0.2.0
-cleo==2.1.0
 click==8.0.4
 click-didyoumean==0.3.0
 click-plugins==1.1.1
@@ -33,6 +32,7 @@ cryptography==36.0.2
 customerio==1.6
 decorator==5.1.1
 Deprecated==1.2.13
+deptry==0.18.0
 distlib==0.3.8
 dnspython==2.1.0
 dulwich==0.21.7
@@ -84,7 +84,6 @@ jmespath==1.0.0
 jsonschema==4.14.0
 keyring==24.3.1
 kombu==5.2.4
-Levenshtein==0.20.8
 lxml==4.9.1
 Mako==1.1.6
 markdown-it-py==3.0.0
@@ -109,6 +108,7 @@ phonenumbers==8.12.49
 pi==0.1.2
 Pillow==9.3.0
 pip-chill==1.0.1
+pipdeptree==2.23.1
 pipenv==2023.12.1
 pkginfo==1.10.0
 platformdirs==4.2.0
@@ -143,7 +143,6 @@ python-socketio==5.5.2
 pytz==2021.3
 PyYAML==6.0.1
 qrcode==7.3.1
-rapidfuzz==*
 rdflib==6.0.2
 redis==4.3.4
 requests==2.26.0
