--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,37 +1,41 @@
-name: Deploy to Glitch
+name: Deploy to Render
 
 on:
   push:
     branches:
-      - main
+      - main # Change this if you want to deploy from a different branch
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Login to GitHub Container Registry
-        run: echo ${{ secrets.GHCR_PAT }} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
+      - name: Cache Docker layers
+        uses: actions/cache@v3
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: ghcr.io/${{ github.repository }}:latest
-
-      - name: Deploy to Glitch
+        env:
+          DOCKER_BUILDKIT: 1
+          RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
         run: |
-          git clone https://github.com/${{ github.repository }} glitch-app
-          cd glitch-app
-          echo "FROM ghcr.io/${{ github.repository }}:latest" > Dockerfile
-          git add Dockerfile
-          git commit -m "Deploy to Glitch"
-          git remote add glitch https://glitch.com/edit/#!/placid-judicious-rock
-          git push glitch main:master --force
+          docker build -t ghcr.io/${{ secrets.GITHUB_REPOSITORY }}:${{ github.sha }} .
+          echo $RENDER_API_KEY | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+          docker push ghcr.io/${{ secrets.GITHUB_REPOSITORY }}:${{ github.sha }}
+
+      - name: Deploy to Render
+        run: |
+          curl -X POST https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}/deploys \
+            -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
+            -H "Content-Type: application/json" \
+            -d '{}'
